[package]
name = "cargo-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1.0.85", default-features = false, features = ["alloc"]}

[features]
default = ["std"]
std = [
	"serde/std",
]

serde = [
	"dep:serde",
]
